@@ -1,8 +1,8 @@
 /*
  *  Qtstalker stock charter
- * 
+ *
  *  Copyright (C) 2001-2007 Stefan S. Stratigakos
- * 
+ *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation; either version 2 of the License, or
@@ -15,7 +15,7 @@
  *
  *  You should have received a copy of the GNU General Public License
  *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, 
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
  *  USA.
  */
 
@@ -60,8 +60,8 @@ class Config
       MainWindowPos, // app position
       PrefDlgWindowSize, // preferences dialog window size
       DbUserName, // sql quotes db user name needed for login
-      BackTesterWindowSize, // last backtester window size
-      ScannerWindowSize,  // last scanner window size
+      BackTesterWindowSize, // unused
+      ScannerWindowSize,  // unused
       Version,  // current qtstalker version
       PlotSizes, // csv list of plot row sizes
       DbPassword, // sql db user password
