@@ -19,31 +19,31 @@
  *  USA.
  */
 
-#include "SCGetIndicator.h"
+#include "SCIndicator.h"
 
 #include <QtDebug>
 
 
-SCGetIndicator::SCGetIndicator ()
+SCIndicator::SCIndicator ()
 {
 }
 
-int SCGetIndicator::calculate (QStringList &l, QByteArray &ba, QHash<QString, PlotLine *> &tlines)
+int SCIndicator::getIndicator (QStringList &l, QByteArray &ba, QHash<QString, PlotLine *> &tlines)
 {
-  // format 'GET_INDICATOR,VARIABLE,BARS' returns the requested data in a CSV string
+  // format 'INDICATOR_GET,VARIABLE,BARS' returns the requested data in a CSV string
 
   ba.clear();
 
   if (l.count() != 3)
   {
-    qDebug() << "SCGetIndicator::calculate: invalid parm count" << l.count();
+    qDebug() << "SCIndicator::getIndicator: invalid parm count" << l.count();
     return 1;
   }
 
   PlotLine *in = tlines.value(l[1]);
   if (! in)
   {
-    qDebug() << "SCGetIndicator::calculate: input parm error" << l[1];
+    qDebug() << "SCIndicator::getIndicator: input parm error" << l[1];
     return 1;
   }
 
@@ -51,7 +51,7 @@ int SCGetIndicator::calculate (QStringList &l, QByteArray &ba, QHash<QString, Pl
   int bars = l[2].toInt(&ok);
   if (! ok)
   {
-    qDebug() << "SCGetIndicator::calculate: bars parm error" << l[2];
+    qDebug() << "SCIndicator::getIndicator: bars parm error" << l[2];
     return 1;
   }
 
@@ -70,22 +70,22 @@ int SCGetIndicator::calculate (QStringList &l, QByteArray &ba, QHash<QString, Pl
   return 0;
 }
 
-int SCGetIndicator::getIndex (QStringList &l, QHash<QString, PlotLine *> &tlines, QByteArray &ba)
+int SCIndicator::getIndex (QStringList &l, QHash<QString, PlotLine *> &tlines, QByteArray &ba)
 {
-  // format = INDEX,INPUT_ARRAY,OFFSET
+  // format = INDICATOR_GET_INDEX,INPUT_ARRAY,OFFSET
 
   ba.clear();
 
   if (l.count() != 3)
   {
-    qDebug() << "SCGetIndicator::getIndex: invalid parm count" << l.count();
+    qDebug() << "SCIndicator::getIndex: invalid parm count" << l.count();
     return 1;
   }
 
   PlotLine *line = tlines.value(l[1]);
   if (! line)
   {
-    qDebug() << "SCGetIndicator::getIndex: invalid input" << l[1];
+    qDebug() << "SCIndicator::getIndex: invalid input" << l[1];
     return 1;
   }
 
@@ -93,20 +93,48 @@ int SCGetIndicator::getIndex (QStringList &l, QHash<QString, PlotLine *> &tlines
   int index = l[2].toInt(&ok);
   if (! ok)
   {
-    qDebug() << "SCGetIndicator::getIndex: invalid index" << l[2];
+    qDebug() << "SCIndicator::getIndex: invalid index" << l[2];
     return 1;
   }
 
   int offset = line->getSize() - 1 - index;
   if (offset < 0)
   {
-    qDebug() << "SCGetIndicator::getIndex: offset greater than" << l[1] << "size";
+    qDebug() << "SCIndicator::getIndex: offset greater than" << l[1] << "size";
     return 1;
   }
 
   ba.append(QString::number(line->getData(offset)));
 
   ba.append('\n');
+
+  return 0;
+}
+
+int SCIndicator::setIndicator (QStringList &l, QHash<QString, PlotLine *> &tlines)
+{
+  // format 'INDICATOR_SET,VARIABLE,CSV,DATA,FROM,NOW,ON' - will create a new line using the provided data
+
+  if (l.count() < 3)
+  {
+    qDebug() << "SCIndicator::setIndicator: invalid parm count " << l.count();
+    return 1;
+  }
+
+  PlotLine *line = tlines.value(l[1]);
+  if (line)
+  {
+    // variable already used, abort
+    qDebug() << "SCIndicator::setIndicator: duplicate variable name" << l[1];
+    return 1;
+  }
+
+  line = new PlotLine;
+  int loop;
+  for (loop = 2; loop < l.count(); loop++)
+    line->append(l[loop].toDouble());
+
+  tlines.insert(l[1], line);
 
   return 0;
 }
