@@ -29,8 +29,7 @@ HEADERS += COSettings.h
 HEADERS += ExScript.h
 HEADERS += Indicator.h
 HEADERS += CODialog.h
-HEADERS += SCGetIndicator.h
-HEADERS += SCSetIndicator.h
+HEADERS += SCIndicator.h
 HEADERS += SCPlot.h
 HEADERS += SCSymbolList.h
 HEADERS += SCGroup.h
@@ -109,8 +108,7 @@ SOURCES += COSettings.cpp
 SOURCES += ExScript.cpp
 SOURCES += Indicator.cpp
 SOURCES += CODialog.cpp
-SOURCES += SCGetIndicator.cpp
-SOURCES += SCSetIndicator.cpp
+SOURCES += SCIndicator.cpp
 SOURCES += SCPlot.cpp
 SOURCES += SCSymbolList.cpp
 SOURCES += SCGroup.cpp
